Deleted test posts. Modified blog main page spacing and other formatting issues. Other small touchups to site

--- a/css/creative.css
+++ b/css/creative.css
@@ -405,25 +405,7 @@ fieldset[disabled] .btn-default.active {
     background-color: #222;
 }
 
-.btn-primary {
-    border-color: #C73254;
-    color: #fff;
-    background-color: #C21E43;
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
-}
 
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary.focus,
-.btn-primary:active,
-.btn-primary.active,
-.open > .dropdown-toggle.btn-primary {
-    border-color: #8A95FE;
-    color: #fff;
-    background-color: #8A95FE;
-}
 
 .btn-primary:active,
 .btn-primary.active,
